--- a/404.html
+++ b/404.html
@@ -1,28 +1,14 @@
 ---
+layout: default
 permalink: /404.html
 ---
-{% include head.html %}
 
-<!DOCTYPE html>
-<html>
+<article class="home-content-main">
 
-  {% include head.html %}
+  <h1>Page not found</h1>
 
-  <body>
-    <div class="wrap">
-      <div class="centered">
-        <embed class="logo-404-svg" src="{{ site.baseurl }}/assets/images/logos/bottle.svg" type="image/svg+xml"></embed>      
-        <div class="message-404">
-          Page not found<br>
+  <p>
+    The page you are looking for is either missing or gone.
+  </p>
 
-          <a href="/"><i class="fa fa-home"></i></a>
-        </div>
-      </div>
-    </div>
-
-    {% if site.use_analytics == true %}
-    {% include google_analytics.html %}
-    {% endif %} 
-  </body>
-
-</html>
+</article>
