--- a/blog.html
+++ b/blog.html
@@ -18,8 +18,7 @@ title: Blog | Vis Design Lab
 
         <div class="post-list-title">
           <a class="post-list-link" href="{{ site.baseurl }}{{ post.url }}">
-            <span>{{ post.title }}</span>
-             <span class="right-text">{{ post.date | date: "%-d %b %Y" }}</span>  
+            <span>{{ post.title }}</span>  <span class="right-text">{{ post.date | date: "%-d %b %Y" }}</span>              
             </a>          
         </div>
 
